--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "homepage": "https://rdedwards1124.github.io/Portfolio",
     "name": "portfolio",
     "version": "0.1.0",
+    "homepage": "https://rdedwards1124.github.io/",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
